--- a/environment.yml
+++ b/environment.yml
@@ -18,4 +18,8 @@ dependencies:
   - wheel=0.45.1=py312haa95532_0
   - xz=5.6.4=h4754444_1
   - zlib=1.2.13=h8cc25b3_1
+  - pip:
+    - numpy==2.2.3
+    - pydicom==3.0.1
+    - shapely==2.0.7
 prefix: C:\Anaconda3\envs\final_project
